<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_1"
            android:icon="@drawable/ic_content_copy"
            android:title="@string/action_menu_1"
            tools:ignore="AppCompatResource" />
        <item
            android:id="@+id/item_2"
            android:icon="@drawable/ic_border_color"
            android:title="@string/action_menu_2" />
        <item
            android:id="@+id/item_3"
            android:icon="@drawable/ic_event"
            android:title="@string/action_menu_3" />
        <item
            android:id="@+id/item_4"
            android:icon="@drawable/ic_assignment_turned"
            android:title="@string/action_menu_4" />
    </group>

    <item
        android:id="@+id/item_5"
        android:icon="@drawable/ic_folder_black"
        android:title="@string/action_menu_5"
        app:showAsAction="withText">
    </item>

    <group android:id="@+id/group_item_5"
        android:checkableBehavior="single"
        android:visible="false">
        <item
            android:id="@+id/item_5_1"
            android:title="@string/action_menu_5_1"
            app:showAsAction="never" />
        <item
            android:id="@+id/item_5_2"
            android:title="@string/action_menu_5_2"
            app:showAsAction="never" />
        <item
            android:id="@+id/item_5_3"
            android:title="@string/action_menu_5_3"
            app:showAsAction="never" />
        <item
            android:id="@+id/item_5_4"
            android:title="@string/action_menu_5_4"
            app:showAsAction="never" />
        <item
            android:id="@+id/item_5_5"
            android:title="@string/action_menu_5_5"
            app:showAsAction="never" />
    </group>

    <item android:title="@string/action_menu_6">
        <menu>
            <item
                android:id="@+id/item_6_1"
                android:title="@string/action_menu_6_1" />
        </menu>
    </item>

    <item android:title="@string/action_menu_7"
        android:checkable="false">
        <menu>
            <item
                android:id="@+id/item_7_1"
                android:title="@string/action_menu_7_1" />
            <item
                android:id="@+id/item_7_2"
                android:title="@string/action_menu_7_2" />
        </menu>
    </item>

</menu>
